syntax = "proto3";

package pluggable.transfer;

option go_package = "pkg/pb";

message FileInfo {
    string file_extension = 1;
}